<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        android:src="@drawable/equalizer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/all_shuffled"
            style="@style/CategoryStyle"
            android:text="@string/category_all" />

        <View
            style="@style/CategoryLineSeparator"/>

        <TextView
            android:id="@+id/all_by_artist"
            style="@style/CategoryStyle"
            android:text="@string/category_artist" />

        <View
            style="@style/CategoryLineSeparator"/>

        <TextView
            android:id="@+id/kids"
            style="@style/CategoryStyle"
            android:text="@string/category_kids" />

        <View
            style="@style/CategoryLineSeparator"/>

        <TextView
            android:id="@+id/classical"
            style="@style/CategoryStyle"
            android:text="@string/category_classical" />

    </LinearLayout>


</RelativeLayout>