<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NowPlayingActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        android:src="@drawable/equalizer" />

    <TextView
        android:id="@+id/playing"
        android:layout_above="@id/song_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium"
        android:paddingStart="@dimen/spacing_medium"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_large"
        android:text="@string/now_playing" />

    <LinearLayout
        android:id="@+id/song_details"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/song_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_medium"
                android:paddingStart="@dimen/spacing_medium"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                android:text="@string/song_name" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_medium"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_xxlarge"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_description"
                android:text="@string/artist_name" />

        </LinearLayout>

        <Button
            android:id="@+id/play_song"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/my_button_bg"
            android:textSize="@dimen/text_large"
            android:text="@string/play" />

    </LinearLayout>

</RelativeLayout>